# tree-sitter-holyc

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/c/: tree-sitter-holyc.h  tree-sitter-holyc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: classes.txt  declarations.txt  expressions.txt  functions.txt  preproc.txt  statements.txt
